Sprint 2: voice + subtitles, real slot coverage, cancel, walk-in assessments
2.6 voice and subtitles; B89/B91 slot coverage and prompt honesty; 2.32 cancel; B85 walk-in assessments; B92 session report shows the visit; B45 server-side PAIN guard; 2.8 Taglish; 0.18 CI. 30 tests, 0 failures.